Immutable HttpHeaders in Angular

--- a/httpclient/interceptor/src/app/app.component.html
+++ b/httpclient/interceptor/src/app/app.component.html
@@ -1,5 +1,5 @@
-<button (click)="getProduct()">
-  Get Data
+<button (click)="get()">
+  Get Data from Server
 </button>
 <pre *ngIf="data">
   {{ data | json }}
